# InstaGrid

./: main.py  pyproject.toml
website/: __init__.py  auth.py  database.db  models.py  views.py
website/static/: index.js  style.css
website/templates/: base.html  blogs.html  blogs_indiv.html  create.html  home.html  login.html  profile.html  sign_up.html
